Revert "adding futter and fixing layout problemns"

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .meal-pic {
-    max-height: 30vh;
-    max-width: 30vw;
+    max-height: 40vh;
+    max-width: 40vw;
     border-radius: 5%;
 }
 
@@ -93,6 +93,7 @@
     text-align: center;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: smaller;
+
 }
 
 .footer p {
